docs/examples/valid/extension/side-effects/arrayEffects.wacc
{
  int[] a = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0] ;

  a[0] += 10;
  println a[0];

  a[1]++;
  println a[1]
}
