docs/examples/invalid/semanticErr/extension/switch/invalidTypeArray.wacc
begin
  int[] hi = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0] ;

  switch hi {
  default:
      skip
  }
end
